--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/public/assets/images/backdev.jpg"
-    />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/backdev.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mon portfolio - Thomas NIGON</title>
   </head>
