--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
       href="/assets/safari-pinned-tab.svg"
       color="#5bbad5"
     />
+    <link rel="shortcut icon" href="/assets/favicon.ico" />
     <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="msapplication-config" content="/assets/browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
+    >
     <title>Mon portfolio - Thomas NIGON</title>
   </head>
   <body>
