--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--     <link rel="icon" type="image/jpg" href="/assets/images/backdev.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+ -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
