add meta tag to add a picture preview of my projeect when I link it

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--     <link rel="icon" type="image/jpg" href="/assets/images/backdev.jpg" />
  -->
+    <meta property="og:title" content="Mon portfolio" />
+    <meta
+      property="og:description"
+      content="Mon portfolio réalisé après ma formation Wild Code School"
+    />
+    <meta property="og:url" content="https://my-port-folio-js.vercel.app/" />
+    <meta property="og:image" content="/assets/images/backdev.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Portfolio Thomas Nigon" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
